# Colomb

./: .gitignore  NETWORKING.md  UICONFIG.md
.github/workflows/: format.yml  release.yml
client/: .gitignore  CMakeLists.txt  Colomb  README.md  compile_flags.txt
client/scripts/: bundle-macos.sh  install-deps-linux.sh
client/src/: CMakeLists.txt  Logger.cpp  Logger.hpp  PathResolver.hpp  ResourcesManager.hpp  main.cpp
client/src/firstmenu/: CMakeLists.txt  FirstMenu.cpp  FirstMenu.hpp
client/src/menu/: CMakeLists.txt  GlobalValues.cpp  GlobalValues.hpp  IMenu.hpp  MenuState.cpp  MenuState.hpp  MenusManager.cpp  MenusManager.hpp
client/src/menu/firstmenu/: FirstMenu.cpp  FirstMenu.hpp
client/src/menu/gamemenu/: CMakeLists.txt  GameMenu.cpp  GameMenu.hpp
client/src/menu/gamependingmenu/: CMakeLists.txt  GamePendingMenu.cpp  GamePendingMenu.hpp  GamesMode.cpp  GamesMode.hpp  Participants.cpp  Participants.hpp
client/src/menu/joingamemenu/: CMakeLists.txt  JoinGameMenu.cpp  JoinGameMenu.hpp
client/src/uiconf/: CMakeLists.txt  UIConf.cpp  UIConf.hpp
client/src/uiconf/uiitem/: Asset.cpp  Asset.hpp  CMakeLists.txt  IUI.hpp  UIButtonImage.cpp  UIButtonImage.hpp  UIButtonText.cpp  UIButtonText.hpp  UIDiv.cpp  UIDiv.hpp  UIPopUp.cpp  UIPopUp.hpp  UITextEntry.cpp  UITextEntry.hpp
client/src/utils/: Archive.cpp  Button.cpp  Button.hpp  CMakeLists.txt  INetwork.cpp  INetwork.hpp  NetworkInternal.cpp  NetworkInternal.hpp  TextEntry.cpp  TextEntry.hpp
server/: .gitignore  CMakeLists.txt  README.md
server/assets/uiconf/: catan.json
server/scripts/: bundle-linux.sh  bundle-macos.sh  bundle-windows.ps1  install-deps-linux.sh
server/src/: CMakeLists.txt  Logger.cpp  Logger.hpp  PathResolver.hpp  ResourcesManager.hpp  main.cpp
server/src/game/: CMakeLists.txt  Game.cpp  Game.hpp  GamesManager.cpp  GamesManager.hpp
server/src/game/games/: CMakeLists.txt  ConfigUI.cpp  ConfigUI.hpp  IGame.hpp  Player.cpp  Player.hpp
server/src/game/games/catan/: CMakeLists.txt  Catan.cpp  Catan.hpp
server/src/utils/: Archive.cpp  Archive.hpp  CMakeLists.txt  FrameRateLimit.hpp  INetwork.cpp  INetwork.hpp  NetworkInternal.cpp  NetworkInternal.hpp
